# example-network-ui-event-tracking-windows

./: .gitignore  README.md
ExampleWindowsApp/: .gitignore  ExampleWindowsApp.sln
ExampleWindowsApp/ExampleWindowsApp/: Program.cs
windows-watcher/: Cargo.toml  example_output.txt
windows-watcher/src/: hooks.rs  logging.rs  main.rs  network.rs  timestamp.rs
