[package]
name = "windows-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dirs = "6.0.0"
once_cell = "1.18"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Globalization",
    "Win32_UI_Input_KeyboardAndMouse",
    "implement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation"
]}
